feat: add icome_type
